Adjust image background width on X11 accordingly when its x position is adjusted. (Bug#17115)